--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
 				</div>
 			</div>
 
-			<div class="small_slider">
+			<!-- <div class="small_slider">
 				<div class="owl-carousel" id="blog">
                     <div class="item">
                         <div class="box hover">
@@ -78,7 +78,7 @@
                         </div>
                     </div>
                 </div>
-			</div>
+			</div> -->
 
 			<div class="gladiators text-center" id="roster">
 				<h2>Our Lions</h2>
