--- a/index.html
+++ b/index.html
@@ -163,6 +163,13 @@
 								<p>mercynoesports@gmail.com</p>
 							</div>
 						</a>
+						<a href="mailto:mercynoesports@gmail.com">
+							<img src="images/email.svg">
+							<div>
+								<span>Our Email</span>
+								<p>mercynoesports@gmail.com</p>
+							</div>
+						</a>
 					</div>
 				</div>
 			</div>
