--- a/index.html
+++ b/index.html
@@ -163,11 +163,11 @@
 								<p>mercynoesports@gmail.com</p>
 							</div>
 						</a>
-						<a href="mailto:mercynoesports@gmail.com">
+						<a href="https://wa.link/3eez1r">
 							<img src="images/email.svg">
 							<div>
-								<span>Our Email</span>
-								<p>mercynoesports@gmail.com</p>
+								<span>Whatsapp</span>
+								<p>+919456919343</p>
 							</div>
 						</a>
 					</div>
